# Evogym-env-LLM

./: .gitignore  .gitmodules  Chat_finetuning_data_prep.ipynb  dataset-upload.py  decoder.ipynb  encoder.ipynb  fine-tuning.py  job-controller.py  make-dataset.py  make-gpt3-5turbo-dataset.py  make-jsonl-test.ipynb  pyproject.toml  run_model.ipynb
dataset/: gpt-dataset.csv  gpt-dataset.jsonl  gpt-dataset_prepared.jsonl  gpt3-5turbo-dataset-v2.jsonl  gpt3-5turbo-dataset-v3.jsonl  gpt3-5turbo-dataset-v4.jsonl  gpt3-5turbo-dataset-v5.jsonl  gpt3-5turbo-dataset.jsonl  test-dataset.jsonl
dataset/env-data/: terrain (10).json  terrain (100).json  terrain (1000).json  terrain (1001).json  terrain (1002).json  terrain (1003).json  terrain (1004).json  terrain (1005).json  terrain (1006).json  terrain (1007).json  terrain (1009).json  terrain (101).json  terrain (1010).json  terrain (1011).json  terrain (1012).json  terrain (1013).json  terrain (1014).json  terrain (1015).json  terrain (1016).json  terrain (1017).json  terrain (1018).json  terrain (1019).json  terrain (102).json  terrain (1020).json  terrain (1021).json  terrain (1022).json  terrain (1023).json  terrain (1024).json  terrain (1025).json  terrain (1026).json  terrain (1027).json  terrain (1028).json  terrain (1029).json  terrain (103).json  terrain (1030).json  terrain (1031).json  terrain (1032).json  terrain (1033).json  terrain (1034).json  (+1279 more)
src/: Chat_finetuning_data_prep.ipynb  add-cppn-env-data.py  dataset-upload.py  fine-tuning.py  job-controller.py  make-gpt3-5turbo-dataset.py  run-model-api.py
(+4 files in other folders)
