[tool.poetry]
name = "Evogym-env-LLM"
version = "0.1.0"
description = ""
authors = ["Ackey-code <1986ackey@gmail.com>"]
readme = "README.md"
packages = [{include = "evogym_env_llm"}]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
ipykernel = "^6.23.1"
notebook = "^6.5.4"
jsonlines = "^3.1.0"
pandas = "^2.0.3"
glfw = "^2.6.2"
tiktoken = "^0.4.0"
openai = "^0.28.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
